refactor: change ID type from UUID to Long across service and repositories